--- a/code/modules/goonchat/browserassets/css/browserOutput.css
+++ b/code/modules/goonchat/browserassets/css/browserOutput.css
@@ -295,7 +295,7 @@ em						{font-style: normal;	font-weight: bold;}
 .denradio				{color: #a8732b;}
 .legionradio			{color: #c27d44;}
 .rangerradio			{color: #83733c;}
-.khanradio				{color: #f0420d;}
+.khansradio				{color: #f0420d;}
 
 .yell					{					font-weight: bold;}
 
